# ml-sharp-optimized

./: README.md  pyproject.toml  setup_secrets.py
.github/workflows/: deploy.yml
src/sharp/cli/: cloud.py  predict.py
src/sharp/modal/: api.py  app.py  progress.py
src/sharp/utils/: gaussians.py
web/: index.html  package.json  vite.config.ts
web/src/: main.ts  styles.css
web/src/viewer/: GaussianViewer.ts
